<resources>
    <string name="app_name">FarmDekho</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">FarmDekho</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered with FarmDekho now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset Link.</string>
    <string name="Developer">Developers:</string>
    <string name="About_Us_Para">Welcome to Our App FarmDekho!. It creates Direct communication between farmers and vendors by adding their product details in
        corresponding pages and search for farmers or vendors. Our App aims to provide service with better user experience in availing the services.</string>
    <string name="Developers_list"> Shankar Narayanan(MECH) \n Skandha Prasath(MECH) \n Guhan(CSE) \n Karthika(ECE) \n Suvetha(EIE)</string>
    <string name="title_activity_farmer">farmer</string>
    <string name="title_activity_vendor">vendor</string>
</resources>
